# Lithium

./: CMakeLists.txt  LICENSE  README.md  version.h.in
src/: abstract_timer.cpp  abstract_timer.h  app_location.cpp  app_location.h  app_version.h  audio_commands.h  audio_interface.cpp  audio_interface.h  audio_interface.ui  audio_interface_data.h  audio_ui.cpp  audio_ui.h  audio_ui.ui  detect_ffmpeg.cpp  detect_ffmpeg.h  detect_storage.cpp  detect_storage.h  encoder_process.cpp  encoder_process.h  ffmpeg_commands_list.h  ffprocess.cpp  ffprocess.h  ffprocess.ui  file_extension_check.cpp  file_extension_check.h  input_probe.cpp  input_probe.h  input_source_probe.cpp  input_source_probe.h  input_tree_model.cpp  input_tree_model.h  input_treeview.cpp  input_treeview.h  input_treeview.ui  lithium_theme.cpp  lithium_theme.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+59 more)
